--- a/_sections/contact.html
+++ b/_sections/contact.html
@@ -4,7 +4,7 @@ icon: fa-envelope
 order: 6
 ---
 
-<p>This form will (hopefully, since it isn't tested yet) allow you to send me an email.<br>
+<p>This form will allow you to send me an email.<br>
   Just enter your name, your email and a short message, then click the [<]submit] button.
   I should be able to get back to you (assuming that I'm awake) fairly shortly.
 </p>
