fixed another thing in the contact.html file

--- a/_sections/contact.html
+++ b/_sections/contact.html
@@ -5,7 +5,7 @@ order: 6
 ---
 
 <p>This form will allow you to send me an email.<br>
-  Just enter your name, your email and a short message, then click the [<]submit] button.
+  Just enter your name, your email and a short message, then click the [submit] button.
   I should be able to get back to you (assuming that I'm awake) fairly shortly.
 </p>
 
