--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -9,7 +9,7 @@ order: 1
 <header>
   <h2 class="alt">Welcome to <strong>TheDesignatedGeek</strong> web site, a place where you can find information about<br />
   my current projects, books, articles in Full Circle Magazine and more.</h2><br>
-  My site is currently using a self modified version (2018.29.5) the Prologue Jekyll Theme which is free. The modifications were for readability (darker text in body and lighter text on sidebar)<br>
+  My site is currently using a self modified version (2018.29.5) of the Prologue Jekyll Theme which is free. The modifications were for readability (darker text in body and lighter text on sidebar)<br>
   <p>You can find more on the original Prologue theme at Chris Bobbe's site on <a href="https://github.com/chrisbobbe/jekyll-theme-prologue">GitHub!</a></p>
   <br>
   I'm still in the process of creating this site, so you might want to visit often so see what changes I end up making. This also means that there might be somethings that are broken here and there.  If you see something that doesn't work correctly, please use the contact section below and let me know.
