Added two pictures to gallery and a blog post on changing tab order for Tkinter

--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -34,5 +34,17 @@ order: 2
           <h3>Strange Clouds</h3>
         </header>
       </div>
+      <div class="item">
+        <a href="#" class="image fit"><img src="{{ 'assets/images/lightning1-july4.png' | relative_url }}" alt="Strange clouds" /></a>
+        <header>
+          <h3>Nature's 4th of July fireworks #1 - Central Texas</h3>
+        </header>
+      </div>
+      <div class="item">
+        <a href="#" class="image fit"><img src="{{ 'assets/images/lightning2-july4.png' | relative_url }}" alt="Strange clouds" /></a>
+        <header>
+          <h3>Nature's 4th of July fireworks #2 - Central Texas</h3>
+        </header>
+      </div>
     </div>
   </div>
