Updated README with links to other github pages 1-17-19

--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -19,3 +19,7 @@ order: 5
     late 2018 or 2019. At this point, I'm planning on it having between 10 and 15 chapters<br>
     and being about 450 pages long.
 </p>
+<p> You can find some of my other projects here on GitHub at...<br>
+<a href="https://github.com/thedesignatedgeek/ScrolledCheckbuttonListBox_Widget">A Scrolled Checkbutton List box Custom Control for Page</a><br>
+<a href="https://github.com/thedesignatedgeek/Page_Splash_and_Tooltips/">Creating a splash page and tool tips in Page</a>
+</p>
