Updated various site files

--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -10,14 +10,14 @@ order: 5
     in Central Texas, USA.  I currently write (somewhat due to medical problems) monthly articles for <br>
     <a href="https://fullcirclemagazine.org">Full Circle Magazine</a>
     and have since issue #27 back in July 2009. <br> 
-    My latest article can be found in issue #140 (December 2018). <br><br>
+    My latest article can be found in issue #192 (April 2023). <br><br>
     I am also an author, amature photographer, fair musician and a pretty darn good cook.<br>
     I ocassionally do custom tutorials for various people and projects, the latest of which <br>
     is for <a href="https://sourceforge.net/projects/page/">Page</a> which is a free GUI designer for Python. <br>
     My tutorial can be found in the /docs folder of the latest Page release. <br><br>
     I am currently writing a book on using Page which will hopefully be published in <br>
-    late 2018 or 2019. At this point, I'm planning on it having between 10 and 15 chapters<br>
-    and being about 450 pages long.
+    late May 2023. At this point, I'm planning on it having 12 chapters<br>
+    and being about 350 pages long.
 </p>
 <p> You can find some of my other projects here on GitHub at...<br>
 <a href="https://github.com/thedesignatedgeek/ScrolledCheckbuttonListBox_Widget">A Scrolled Checkbutton List box Custom Control for Page</a><br>
