--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -15,7 +15,7 @@ order: 1
   <br>
   I'm still in the process of creating this site, so you might want to visit often so see what changes I end up making. This also means that there might be somethings that are broken here and there.  If you see something that doesn't work correctly, please use the contact section below and let me know.
       <br>
-      <i><strong>Update Sunday 24 April, 2022 -<br>
+      <i><strong>Update Sunday 30 April, 2023 -<br>
         <br>
         I'm SO sorry that it's been so long since I've updated this site.&nbsp;
         The reasons are fairly normal for anyone.&nbsp; Health problems,
@@ -23,7 +23,7 @@ order: 1
         this before.<br>
         <br>
         I still am writing for Full Circle Magazine, I'm still trying to work on
-        my book on PAGE (currently into Chapter 3).&nbsp; I'm still working with
+        my book on PAGE (currently with the publisher for editing).&nbsp; I'm still working with
         Don Rozenberg on new versions of PAGE and trying to support it.&nbsp;
         Needless to say, I am keeping busy, but my body keeps being
         uncooperative so it's difficult.<br>
